# DDD

./: .gitignore  Cargo.toml  README.md  bot_decide_test.js  bot_play_auto_seed.js  bot_play_seed_test.js  bot_simulate_seed.js  capture_screen.js  capture_tetrio_scripts.js  decode_ws_log.js  engine_server.js  extract_keyword_context.js  extract_minotypes.js  extract_prng_only.js  extract_rng_context.js  extract_tetrio_core.js  index.js  inspect-chunks-output.txt  inspect-multi-output.txt  inspect_ws_chunks.js  inspect_ws_log.js  inspect_ws_multi.js  keyword-snippets.txt  minotypes-snippets.txt  package-lock.json  package.json  playwright_key_test.js  prng-only.txt  rng-snippets.txt  runner.js  scan_tetrio_scripts.js  script-keyword-hits.txt  summarize_ws_log.js  test_queue_module.js  tetrio-core-snippets.txt  tetrio_queue.js  tetrio_queue_test.js  tetrio_ws_logger.js  ws-log.jsonl  봇테스트.md  (+1 more)
training/: .gitignore  MODAL_FAILURES_TIPS_TRICKS.md  MODAL_PLAYER_CONTEXT_ARTIFACT_SMOKE_2026-03-10.md  PHASE0_STATE_CONTRACT.md  PHASE1_SEARCH_ALIGNED_SUPERVISION.md  PLAYER_CONTEXT_TASK45_SMOKE_2026-03-10.md  POLICY_VALUE_LABEL_GENERATION_DEBUG_2026-03-10.md  POLICY_VALUE_REBUILD_BLUEPRINT.md  POLICY_VALUE_STATE_2026-03-12.md  POLICY_VALUE_V2_CONTRACT_PLAN.md  SATURATION_ATTEMPTS.md  TRAINING.md  pyproject.toml
training/data/: dataset.py  policy_value_dataset.py
training/models/: __init__.py  lit_module.py  policy_value.py  policy_value_lit_module.py  student.py  teacher.py
training/scripts/: distill_student.py  export_policy_value_onnx.py  export_weights.py  generate_policy_value_labels.py  gpu_profiles.py  gpu_saturation_probe.py  modal_app.py  optuna_objective.py  policy_value_pipeline.py  preprocess_replays.py  train_policy_value.py
training/tests/: test_dataset_contract.py  test_example_schema.py  test_export_policy_value_onnx.py  test_generate_policy_value_labels.py  test_gpu_saturation_probe.py  test_modal_app_bootstrap.py  test_policy_value_dataset.py  test_policy_value_lit_module.py  test_policy_value_model.py  test_policy_value_pipeline.py  test_policy_value_schema.py  test_preprocess_contract.py  test_runtime_config.py  test_runtime_training_contract_parity.py  test_teacher_target_contract.py
training/utils/: __init__.py  activations.py  (+5 more)
(+305 files in other folders)
