[project]
name = "fusion-training"
version = "0.1.0"
description = "Neural network training pipeline for TETR.IO coaching engine"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.0",
    "lightning>=2.4.0",
    "optuna>=4.0.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "modal>=0.68.0",
]

[dependency-groups]
dev = [{include-group = "lint"}, {include-group = "test"}]
lint = ["ruff"]
test = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
